Fixing navigation bar alignment

--- a/src/components/Journey/Journey.css
+++ b/src/components/Journey/Journey.css
@@ -57,7 +57,8 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: white; 
+  margin-top: -100px;
 }
 
 .App-link {
