--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,74 +1,88 @@
 .navbar-container {
   display: flex;
   background-color: #e6e6e6e6;
-  height: 110px;
+  height: 100px;
   border-radius: 10px;
-  width: 100%;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 40px;
-}
-
-.logo-container {
-  display: inline-block;
-  margin-left: 300px;
-  font-family: "Inter", sans-serif;
-  cursor: pointer;
-  margin-top: 32px;
-}
-
-.nav-links {
-  cursor: pointer;
-  font-family: "Inter", sans-serif;
-}
-.nav-services {
-  justify-content: center;
-  padding-top: 46px;
-  cursor: pointer;
-  margin-left: 350px;
-}
-
-.nav-technology {
-  padding-top: 46px;
-  cursor: pointer;
-  margin-left: 30px;
-}
-
-.nav-about {
-  padding-top: 46px;
-  cursor: pointer;
-  margin-left: 30px;
-}
-
-.nav-blogs {
-  padding-top: 46px;
-  cursor: pointer;
-  margin-left: 30px;
-}
-
-.nav-links {
-  display: inline-flex;
-  justify-content: center;
-  cursor: pointer;
-  font-family: "Inter", sans-serif;
-}
-
-.usa {
-  width: 27px;
-  height: 27px;
-  margin-right: 10px;
-}
-
-.linkedin {
-  width: 30px;
-  height: 30px;
-  margin-right: 3px;
+  max-width: 1200px; 
+  margin: 0 auto; 
+  position: relative;
+  top: 80px;
 }
 
 .logodw {
-  width: 130px;
-  height: 60px;
-  margin-left: 30px;
+  width: 100px; 
+  height: 50px;
   margin-top: 30px;
+  margin-left: 20px;  
+} 
+
+.logo-container {
+  display: flex;
+  align-items: center;
+  margin-left: auto; 
+  font-family: "Inter", sans-serif;
+  cursor: pointer;
+}
+
+.contact {
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: 20px; 
+  margin-top: 35px; 
+}
+
+.nav-links {
+  display: flex;
+  align-items: center;
+  margin-left: 250px;
+}
+
+.nav-link {
+  cursor: pointer;
+  font-family: "Inter", sans-serif;
+  margin: 0 10px;
+}
+
+.linkedin {
+  margin-right: -85px;
+  margin-top: -10px;
+  height: 35px;
+  width: 35px;
+}
+
+.usa {
+  margin-right: 10px;
+  margin-top: -10px;
+  height: 32px;
+  width: 32px;
+}
+
+
+@media (max-width: 768px) {
+
+  .navbar-container {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .logo-container,
+  .contact {
+    margin: 10px 0;
+    text-align: center;
+  }
+
+  .nav-links {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+  }
+
+  .usa {
+    margin: 0;
+    margin-bottom: 5px;
+  }
+  .linkedin {
+    margin: 0;
+    margin-bottom: 5px;
+  }
 }
